--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 cfg-if = "0.1.2"
-wasm-bindgen = "=0.2.65"
-pulldown-cmark = "0.4.0"
+wasm-bindgen = "0.2.71"
+pulldown-cmark = "0.8.0"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
